# Foyers

./: .gitignore  LICENSE  README.md
docs/: block_diagram.puml  system_arch.puml
electronics/BackPorch/: BackPorch.kicad_pcb  BackPorch.kicad_prl  BackPorch.kicad_pro  BackPorch.kicad_sch  IO.kicad_sch  Power.kicad_sch  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  stm32.kicad_sch
electronics/BackPorch_lite/: BackPorch.kicad_pcb  BackPorch.kicad_prl  BackPorch.kicad_pro  BackPorch.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
electronics/Foyers/: Foyers.kicad_pcb  Foyers.kicad_prl  Foyers.kicad_pro  Foyers.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
mechanical/: Backporch_holder.SLDPRT  Backporch_holder_top.3mf  Backporch_holder_top.SLDPRT  Foyer.SLDASM  Foyer_baseplate.SLDPRT  Foyer_baseplate_pcb_holder.SLDPRT
parts/: LocalSyms.kicad_sym
parts/KiCADv6/: 2025-04-16_13-42-26.kicad_sym  2025-04-16_13-42-32.kicad_sym
parts/LocalFootprints.pretty/: AMPHENOL_54602-908LF.kicad_mod  CONN2_2601-1102_WAG.kicad_mod  CONN4_2601-1104_WAG.kicad_mod  CONN_1862042.kicad_mod  PHOENIX_1862107.kicad_mod  SW_JS202011SCQN.kicad_mod  fm_stemalliance.kicad_mod
parts/Step/: 2601-1102.stp  2601-1104.stp  pxc_1862042_01_01_SPTAF-1-2-3-5-EL_3D.stp  readme-and-terms-of-use-3d-cad-models.txt
software/: AGENT.md  README.md
software/app/: app.py
software/backporch/: .mxproject  CMakeLists.txt  STM32G0B1XX_FLASH.ld  backporch.ioc
software/bootloader/BootloaderLib/: CMakeLists.txt  bootloader.c  bootloader.h  version.h
software/common/: common.h  (+1 more)
(+65 files in other folders)
